--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-flask>=2.0.0
-requests>=2.26.0
-beautifulsoup4>=4.10.0
-python-dotenv>=0.19.0
-concurrent-log-handler>=0.9.20
+flask
+requests
+beautifulsoup4
