--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
-    name: api-priv
+    name: search-api
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
-    envVars:
-      - key: OPENROUTER_API_KEY
